package example2;

public interface IForm {
}
