package example2;

public interface ISQL {
    //прописываем метод save
    public void save(IForm f);
}
