package example2;
// реализовываем класс для фреймворка
public class WebFramework {
    // в методе save указываем интерфейс IForm в качестве объекта формы для сохранения, в результате чего класс становится универсальным,
    // он работает с произвольными формами
    public void save(IForm frm) {
        //создаем переменную db универсального типа, используя интерфейс ISQL
        ISQL db = new MySQL();
        db.save(frm);
    }
}
